--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   mysql:
     build: ./docker/mysql
     ports:
-      - "<host-port>:3306"
+      - "<mysql-host-port>:3306"
     environment:
       MYSQL_ROOT_PASSWORD: <project-name>
       MYSQL_DATABASE: <project-name>
