Added directive to PHP Dockerfile to prevent permission errors when www-data user tries to write to the shared volume.

--- a/docker/development/php/Dockerfile
+++ b/docker/development/php/Dockerfile
@@ -37,3 +37,6 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
     
 ENV TERM xterm
+
+# This directive is used to prevent permission issues when using shared volumes. Do not use in production!
+RUN adduser www-data root
